Letter spacing fix

--- a/src/stylesheets/navigation.scss
+++ b/src/stylesheets/navigation.scss
@@ -37,7 +37,7 @@
 .navigation--primary {
   background-color: #232828;
   text-transform: uppercase;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.17em;
   font-weight: bold;
   font-size: 1.25em;
 
